	- Minor changes in CSTO faction
	- Added Private Military Companies mechanic
	- Added tooltip for russian focus The 2000 Elections to avoid future questions
	- There are now unique Aces for various cultural groups
	- Added ideological powers to all political parties
	- 18 new formable nations, still without any country flags/names, but will be later

Focus Trees:
	- New/Improved Focus Trees: Spain, Armenia, Azerbaijan, Iran, United States and Italy
	- Rebalanced French, Danish and Nigerian trees
	- Improved Russian Putin's Path
	- Added search filters to the Finnish, EU, USoE and POTEF trees
	- Norway's tree converted to a shared tree with the generic
	- Expanded the Generic Tree's content

Graphics:
	- 55 or so new models for various vehicles and tags

Modding:
	- Added new modifiers for propaganda campaign cost modifiers
	- Added new modifiers for economic project cost modifiers
	- Added new scripts for adding and removing coalition members at ease

Performance:
	- Implemented dirty variables to several scripted GUIs to improve runtime
	- Missiles now have a dirty variable optimizing runtime
	- Implemented dirty variables to Money UIs
	- Improvement for Mircostates remove game rule, now this rule should remove more useless and small countries, especially in Pacific Ocean and Caribbean Sea
	- Cleaned up more add_ai_strategy to optimized AI calls

Quality of Life (QoL):
	- New map modes: GCC (Gulf Cooperation Council), ECOWAS (Economic Community of West African States)
	- Added close button in Satellite Orbit window for convenience
	- EU map mode now has unique colors for office holders

v1.6.3
AI:
	- Investment AI will no longer offer you projects that exceed 730 days
	- Disabled Anti Bully Decisions for AI (They didn't use it anyways)
	- Armenian/Azerbaijan Hostile Relations added
	- Armenia will try and protect Artaskh
	- Tweaked the ability for the AI to build offices
	- Expanded their desire for industrial strength above all (Should build up longer)