@@ -1,5 +1,4 @@
 difficulty_settings = {
-
 	difficulty_setting = {
 		key = "custom_diff_strong_isi"
 		modifier = diff_strong_ai_generic
@@ -67,6 +66,12 @@ difficulty_settings = {
 		multiplier = 2.0
 	}
 	difficulty_setting = {
+		key = "custom_diff_strong_spr"
+		modifier = diff_strong_ai_generic
+		countries = { SPR }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
 		key = "custom_diff_strong_nig"
 		modifier = diff_strong_ai_generic
 		countries = { NIG }
@@ -94,12 +99,6 @@ difficulty_settings = {
 		key = "custom_diff_strong_ita"
 		modifier = diff_strong_ai_generic
 		countries = { ITA }
-		multiplier = 2.0
-	}
-	difficulty_setting = {
-		key = "custom_diff_strong_spr"
-		modifier = diff_strong_ai_generic
-		countries = { SPR }
 		multiplier = 2.0
 	}
 	difficulty_setting = {
@@ -205,8 +204,278 @@ difficulty_settings = {
 		multiplier = 2.0
 	}
 	difficulty_setting = {
+		key = "custom_diff_strong_den"
+		modifier = diff_strong_ai_generic
+		countries = { DEN }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_strong_fin"
+		modifier = diff_strong_ai_generic
+		countries = { FIN }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_strong_aze"
+		modifier = diff_strong_ai_generic
+		countries = { AZE }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_strong_arm"
+		modifier = diff_strong_ai_generic
+		countries = { ARM }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_strong_bot"
+		modifier = diff_strong_ai_generic
+		countries = { BOT }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
 		key = "custom_diff_strong_lic"
 		modifier = diff_strong_ai_generic
+		countries = { LIC }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_isi"
+		modifier = diff_weak_ai_generic
+		countries = { ISI }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_ger"
+		modifier = diff_weak_ai_generic
+		countries = { GER }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_sov"
+		modifier = diff_weak_ai_generic
+		countries = { SOV }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_fra"
+		modifier = diff_weak_ai_generic
+		countries = { FRA }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_eng"
+		modifier = diff_weak_ai_generic
+		countries = { ENG }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_usa"
+		modifier = diff_weak_ai_generic
+		countries = { USA }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_jap"
+		modifier = diff_weak_ai_generic
+		countries = { JAP }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_chi"
+		modifier = diff_weak_ai_generic
+		countries = { CHI }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_kor"
+		modifier = diff_weak_ai_generic
+		countries = { KOR }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_nko"
+		modifier = diff_weak_ai_generic
+		countries = { NKO }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_raj"
+		modifier = diff_weak_ai_generic
+		countries = { RAJ }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_spr"
+		modifier = diff_weak_ai_generic
+		countries = { SPR }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_nig"
+		modifier = diff_weak_ai_generic
+		countries = { NIG }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_bra"
+		modifier = diff_weak_ai_generic
+		countries = { BRA }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_mex"
+		modifier = diff_weak_ai_generic
+		countries = { MEX }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_can"
+		modifier = diff_weak_ai_generic
+		countries = { CAN }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_ita"
+		modifier = diff_weak_ai_generic
+		countries = { ITA }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_saf"
+		modifier = diff_weak_ai_generic
+		countries = { SAF }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_ast"
+		modifier = diff_weak_ai_generic
+		countries = { AST }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_ind"
+		modifier = diff_weak_ai_generic
+		countries = { IND }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_per"
+		modifier = diff_weak_ai_generic
+		countries = { PER }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_isr"
+		modifier = diff_weak_ai_generic
+		countries = { ISR }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_tur"
+		modifier = diff_weak_ai_generic
+		countries = { TUR }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_gre"
+		modifier = diff_weak_ai_generic
+		countries = { GRE }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_sau"
+		modifier = diff_weak_ai_generic
+		countries = { SAU }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_swe"
+		modifier = diff_weak_ai_generic
+		countries = { SWE }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_pol"
+		modifier = diff_weak_ai_generic
+		countries = { POL }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_ukr"
+		modifier = diff_weak_ai_generic
+		countries = { UKR }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_swi"
+		modifier = diff_weak_ai_generic
+		countries = { SWI }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_brm"
+		modifier = diff_weak_ai_generic
+		countries = { BRM }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_syr"
+		modifier = diff_weak_ai_generic
+		countries = { SYR }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_uae"
+		modifier = diff_weak_ai_generic
+		countries = { UAE }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_eth"
+		modifier = diff_weak_ai_generic
+		countries = { ETH }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_arg"
+		modifier = diff_weak_ai_generic
+		countries = { ARG }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_den"
+		modifier = diff_weak_ai_generic
+		countries = { DEN }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_fin"
+		modifier = diff_weak_ai_generic
+		countries = { FIN }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_aze"
+		modifier = diff_weak_ai_generic
+		countries = { AZE }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_arm"
+		modifier = diff_weak_ai_generic
+		countries = { ARM }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_bot"
+		modifier = diff_weak_ai_generic
+		countries = { BOT }
+		multiplier = 2.0
+	}
+	difficulty_setting = {
+		key = "custom_diff_weak_lic"
+		modifier = diff_weak_ai_generic
 		countries = { LIC }
 		multiplier = 2.0
 	}
