@@ -659,6 +659,42 @@ diff_strong_ai_generic = {
 	experience_gain_navy_unit_factor = 0.10
 }
 
+diff_weak_ai_generic = {
+	# fightyness
+	dig_in_speed_factor = -0.25
+	planning_speed = -0.25
+	supply_consumption_factor = 0.25
+	army_morale_factor = -0.15
+	land_reinforce_rate = -0.01
+
+	# defensivness
+	army_core_attack_factor = -0.15
+	army_core_defence_factor = -0.15
+
+	attrition = 0.075
+
+	# production/research
+	production_factory_max_efficiency_factor = -0.15
+	production_factory_efficiency_gain_factor = -0.25
+	industrial_capacity_dockyard = -0.2
+	political_power_factor = -0.25
+	research_speed_factor = -0.1
+	production_lack_of_resource_penalty_factor = 0.3
+
+	# fuel
+	army_fuel_consumption_factor = 0.40
+	air_fuel_consumption_factor = 0.40
+ 	navy_fuel_consumption_factor = 0.40
+
+	# xp gain
+	experience_gain_air_factor = -0.25
+	experience_gain_army_factor = -0.25
+	experience_gain_navy_factor = -0.25
+	air_mission_xp_gain_factor = -0.25
+	experience_gain_army_unit_factor = -0.10
+	experience_gain_navy_unit_factor = -0.10
+}
+
 naval_mines_effect = {
 	naval_accidents_chance = 0.15
 	naval_speed_factor = -0.8
