@@ -33,4 +33,49 @@
  custom_diff_strong_uae: "@UAE Strengthen United Arab Emirates"
  custom_diff_strong_eth: "@ETH Strengthen Ethiopia"
  custom_diff_strong_arg: "@ARG Strengthen Argentina"
+ custom_diff_strong_den: "@DEN Strengthen Denmark"
+ custom_diff_strong_fin: "@FIN Strengthen Finland"
+ custom_diff_strong_aze: "@AZE Strengthen Azerbaijan"
+ custom_diff_strong_arm: "@ARM Strengthen Armenia"
+ custom_diff_strong_bot: "@BOT Strengthen Botswana"
  custom_diff_strong_lic: "@LIC Strengthen Liechtenstein"
+ custom_diff_weak_isi: "@ISI Weaken Islamic State"
+ custom_diff_weak_ger: "@GER Weaken Germany"
+ custom_diff_weak_sov: "@SOV Weaken Russia"
+ custom_diff_weak_fra: "@FRA Weaken France"
+ custom_diff_weak_eng: "@ENG Weaken United Kingdom"
+ custom_diff_weak_usa: "@USA Weaken United States"
+ custom_diff_weak_jap: "@JAP Weaken Japan"
+ custom_diff_weak_chi: "@CHI Weaken China"
+ custom_diff_weak_kor: "@KOR Weaken South Korea"
+ custom_diff_weak_nko: "@NKO Weaken North Korea"
+ custom_diff_weak_raj: "@RAJ Weaken India"
+ custom_diff_weak_nig: "@NIG Weaken Nigeria"
+ custom_diff_weak_bra: "@BRA Weaken Brazil"
+ custom_diff_weak_mex: "@MEX Weaken Mexico"
+ custom_diff_weak_can: "@CAN Weaken Canada"
+ custom_diff_weak_ita: "@ITA Weaken Italy"
+ custom_diff_weak_spr: "@SPR Weaken Spain"
+ custom_diff_weak_saf: "@SAF Weaken South Africa"
+ custom_diff_weak_ast: "@AST Weaken Australia"
+ custom_diff_weak_ind: "@IND Weaken Indonesia"
+ custom_diff_weak_per: "@PER Weaken Iran"
+ custom_diff_weak_isr: "@ISR Weaken Israel"
+ custom_diff_weak_tur: "@TUR Weaken Turkey"
+ custom_diff_weak_gre: "@GRE Weaken Greece"
+ custom_diff_weak_sau: "@SAU Weaken Saudi Arabia"
+ custom_diff_weak_swe: "@SWE Weaken Sweden"
+ custom_diff_weak_pol: "@POL Weaken Poland"
+ custom_diff_weak_ukr: "@UKR Weaken Ukraine"
+ custom_diff_weak_swi: "@SWI Weaken Switzerland"
+ custom_diff_weak_brm: "@BRM Weaken Myanmar"
+ custom_diff_weak_syr: "@SYR Weaken Syria"
+ custom_diff_weak_uae: "@UAE Weaken United Arab Emirates"
+ custom_diff_weak_eth: "@ETH Weaken Ethiopia"
+ custom_diff_weak_arg: "@ARG Weaken Argentina"
+ custom_diff_weak_den: "@DEN Weaken Denmark"
+ custom_diff_weak_fin: "@FIN Weaken Finland"
+ custom_diff_weak_aze: "@AZE Weaken Azerbaijan"
+ custom_diff_weak_arm: "@ARM Weaken Armenia"
+ custom_diff_weak_bot: "@BOT Weaken Botswana"
+ custom_diff_weak_lic: "@LIC Weaken Liechtenstein"
