@@ -127,6 +127,7 @@ Content:
 	- There are now unique Aces for various cultural groups
 	- Added ideological powers to all political parties
 	- 18 new formable nations, still without any country flags/names, but will be later
+	- New game rules to weaken countries
 
 Focus Trees:
 	- New/Improved Focus Trees: Spain, Armenia, Azerbaijan, Iran, United States and Italy
